--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^0.33.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
