--- a/notes-app-client/package.json
+++ b/notes-app-client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.1.2",
     "aws-amplify": "^2.2.0",
     "react": "^16.12.0",
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^0.33.0",
     "react-dom": "^16.12.0",
     "react-router-bootstrap": "^0.25.0",
